# laughing-funicular

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  SUMMARY.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  start.sh
app/: __init__.py  app.py  journey_planner.py  models.py
app/scrapers/: __init__.py  rotten_tomatoes_scraper.py  wikipedia_scraper.py
app/static/css/: styles.css
app/static/js/: app.js
app/templates/: index.html
app/utils/: vector_store.py
tests/: __init__.py  test_app.py
